--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "lib": "lib"
   },
   "scripts": {
+    "start": "node ./lib/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "mime": "^2.2.0",
-    "socket.io": "^2.0.4"
+    "socket.io": "^2.0.4",
+    "standard": "^10.0.3"
   }
 }
